--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -117,6 +117,7 @@
     .schedule-join-col,
     .schedule-cta {
       text-align: right;
+      width: 120px; /* give buttons room so text stays on one line */
     }
     .schedule-btn {
       display: inline-block;
@@ -124,6 +125,7 @@
       padding: 0.6rem 1.6rem;
       border-radius: 999px;
       text-transform: lowercase;
+      white-space: nowrap; /* keep 'join' on a single line */
     }
 
     @media (max-width: 768px) {
@@ -232,7 +234,7 @@
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
           <a href="#dec20" class="date-pill">Dec 20</a>
-	  <a href="#nov21" class="date-pill">Nov 21</a>
+          <a href="#nov21" class="date-pill">Nov 21</a>
           <a href="#nov15" class="date-pill">Nov 15</a>
           <a href="#oct18" class="date-pill">Oct 18</a>
           <a href="#sept19" class="date-pill">Sept 19</a>
@@ -267,12 +269,12 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.mygreenyogi.com/telegraph-schedule"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
 
-	  <!-- Nov 28 -->
+          <!-- Nov 28 -->
           <tr id="nov28">
             <td class="schedule-date">Friday, Nov 28th</td>
             <td class="schedule-time">1:00 PM</td>
@@ -284,7 +286,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.beachglasshyp.com/schedule"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
@@ -301,7 +303,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.beachglasshyp.com/schedule"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
@@ -318,7 +320,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/DHUxfV9lVuVZHBs4idoE"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
@@ -335,7 +337,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
@@ -352,7 +354,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
@@ -369,7 +371,7 @@
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
                  target="_blank" rel="noopener">
-                join us
+                join
               </a>
             </td>
           </tr>
