--- a/login.html
+++ b/login.html
@@ -105,9 +105,16 @@
 
 <!-- Tokens / Crypto -->
 <a class="btn btn-pill btn-dark btn-wide"
+   href="images/donate.jpg"
+   target="_blank" rel="noopener noreferrer">
+   Donate Now
+</a>
+
+<!-- Tokens / Crypto -->
+<a class="btn btn-pill btn-dark btn-wide"
    href="images/crypto.jpg"
    target="_blank" rel="noopener noreferrer">
-   Subscribe with Crypto
+   Pay with Crypto
 </a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
