Donate Button Jpg

--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="images/donate.jpg"
    target="_blank" rel="noopener noreferrer">
-   Donate Now
+   One-Time Donation
 </a>
 
 <!-- Tokens / Crypto -->
