Remove Genoma details

--- a/login.html
+++ b/login.html
@@ -121,8 +121,7 @@
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
   	<p class="plan-note">
-    	Change or cancel anytime. Practice, breathe, give back—5% of proceeds go to biomedical research committed to curing genetic disease at
-    	<a href="https://www.genoma.institute" target="_blank" rel="noopener">the Genoma Institute</a>. 
+    	Change or cancel anytime.</a>. 
       </p> 
     </div>
   </div>
