Venmo Donate Option Update

--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 
 <!-- Tokens / Crypto -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="images/donate.jpg"
+   href="https://venmo.com/code?user_id=4476070791219179164&created=1764358269.647224&printed=1"
    target="_blank" rel="noopener noreferrer">
    One-Time Donation
 </a>
