--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -233,7 +233,7 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
-          <a href="#dec20" class="date-pill">Dec 13</a>
+          <a href="#dec13" class="date-pill">Dec 13</a>
           <a href="#nov21" class="date-pill">Nov 21</a>
           <a href="#nov15" class="date-pill">Nov 15</a>
           <a href="#oct18" class="date-pill">Oct 18</a>
@@ -257,8 +257,8 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Dec 20 -->
-          <tr id="dec20">
+          <!-- Dec 13 -->
+          <tr id="dec13">
             <td class="schedule-date">Saturday, Dec 13th</td>
             <td class="schedule-time">11:00 AM</td>
             <td class="schedule-duration">60 min</td>
@@ -267,7 +267,7 @@
             <td class="schedule-location">Green Yogi Berkeley</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
-                 href="https://www.mygreenyogi.com/telegraph-schedule"
+                 href="https://partiful.com/e/2aidGxGBVlRF2Q5FaXpf"
                  target="_blank" rel="noopener">
                 join
               </a>
