--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -26,9 +26,9 @@
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Corporate Wellness">
+<meta property="og:title" content="Private One-on-one Yoga Sessions">
 <meta property="og:description" content="Personalized yoga, meditation, and nutrition meeting you where you are.">
-<meta property="og:image" content="https://www.yogawithlisa.ai/images/corporate-hero.jpg">
+<meta property="og:image" content="https://www.yogawithlisa.ai/images/oneonone-hero.jpg">
 <meta property="og:url" content="https://www.yogawithlisa.ai">
 <meta property="og:type" content="website">
 
@@ -47,16 +47,16 @@
     </div>
   </header>
 
-  <!-- Hero for Corporate Page -->
+  <!-- Hero for One-on-One Page -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/corporate-hero.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/oneonone-hero.jpg -->
+    <div class="hero-media" style="background-image:url('images/oneonone-hero.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
       <h1 class="display">
         <span class="nowrap">Movement <em>&</em> Meditation.</span><br/>
-        For <em> your</em> business.
+        Just <em> for</em> you.
       </h1>
         <a class="btn btn-dark btn-pill" href="#packages">VIEW PROGRAMS</a>
         <a class="btn btn-dark btn-pill" href="#contact">REQUEST A QUOTE</a>
@@ -66,10 +66,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Designed with <em>your team</em> in mind.</h2>
+    <h2>Let me help you <em>reach</em> your goals.</h2>
     <p>
-     Yoga with Lisa makes wellness simple and accessible with genuinely effective—on-demand classes, guided breathwork & meditation, as well as light strength to balance tough work or study days. Programs are flexible (morning, midday, or after-hours), inclusive for all levels, and built to support both the mental and physical health of your high performing team.
-    </p>
+     Yoga with Lisa makes yoga and meditation simple and accessible with personalized, private one-on-one classes. Whether you are interested in mastering your handstand, nursing an injury, in the market for specialized yoga practices, like chair yoga for example, we've got you covered. We will study your needs, help you reach your goals, and offer hands on adjustments during our one-on-one sessions.</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -113,15 +112,15 @@
       </div>
       <div class="card" style="flex:1 1 220px; padding:20px;">
         <h3 style="margin:0 0 6px;">More Energy</h3>
-        <p style="margin:0; color:#6b6b6b;">Movement snacks that counter sitting & screen time.</p>
+        <p style="margin:0; color:#6b6b6b;">Practices to help your restore your core or gain your strength back after injury.</p>
       </div>
       <div class="card" style="flex:1 1 220px; padding:20px;">
         <h3 style="margin:0 0 6px;">Team Cohesion</h3>
-        <p style="margin:0; color:#6b6b6b;">Optional live sessions to build culture & connection.</p>
+        <p style="margin:0; color:#6b6b6b;">Adaptable to your needs, your body, your schedule.</p>
       </div>
       <div class="card" style="flex:1 1 220px; padding:20px;">
         <h3 style="margin:0 0 6px;">Turn-key Setup</h3>
-        <p style="margin:0; color:#6b6b6b;">We handle onboarding, comms, and ongoing support.</p>
+        <p style="margin:0; color:#6b6b6b;">We design the plan and strategy to help you reach your goals.</p>
       </div>
     </div>
   </section>
@@ -131,19 +130,19 @@
     <h2 style="text-align:center; margin-bottom:20px;">Programs</h2>
 
     <div class="cards-row" style="gap:20px;">
-      <!-- Corporate / Staff -->
+      <!-- Single Session -->
       <article class="card" style="flex:1 1 420px; overflow:hidden;">
         <div class="card-media" style="height:240px; background:url('images/corporate-staff.jpg') center/cover;"></div>
         <div class="card-body" style="padding:20px;">
           <h3>Corporate / Staff Package</h3>
           <p style="color:#6b6b6b;">
-            Weekly live or on-demand yoga + mindfulness with optional strength add-ons. Access to the full class library, monthly wellness prompts, and team challenges. Great for departments or company-wide.
+            Single private one-on-one yoga classes starting at $250.  
           </p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
-            <li>All-levels yoga & mobility</li>
-            <li>Guided breathwork & meditation</li>
-            <li>Optional live Zoom sessions</li>
-            <li>Onboarding kit & comms templates</li>
+            <li>A fully customized all-levels 70-95 min yoga & mobility session.</li>
+            <li>Guided breathwork & meditation, which can include include yoga nidra, grounding, or visualization work.</li>
+            <li>Props can be provided for comfort & optimal alignment.</li>
+            <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
@@ -152,23 +151,47 @@
         </div>
       </article>
 
-      <!-- Student / Grad -->
+      <!-- Multi Session Yoga Packages -->
       <article class="card" style="flex:1 1 420px; overflow:hidden;">
         <div class="card-media" style="height:240px; background:url('images/student-grad.jpg') center/cover;"></div>
         <div class="card-body" style="padding:20px;">
-          <h3>Student / Grad Package</h3>
+          <h3>3-Session Yoga Package</h3>
           <p style="color:#6b6b6b;">
-            Designed for academic schedules: shorter modules, exam-week de-stress flows, and study breaks. Student pricing, .edu perks, and group options for labs, teams, & clubs.
+            Perfect for beginners, busy professionals, or anyone wanting to build consistency.
           </p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
+	    <li>Three 75–90 minute private sessions for $675</li>
+            <li>A personalized practice plan and mid-package review</li>
+            <li>Support between session, 3 questions per week via text/email</li>
             <li>Cycle-aware & recovery-friendly options</li>
-            <li>Focus & sleep meditations</li>
-            <li>.edu discounts & group rates</li>
-            <li>Fast setup for departments & orgs</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">STUDENT DISCOUNT</a>
+            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+
+
+<!-- Multi Session Yoga Packages -->
+      <article class="card" style="flex:1 1 420px; overflow:hidden;">
+        <div class="card-media" style="height:240px; background:url('images/student-grad.jpg') center/cover;"></div>
+        <div class="card-body" style="padding:20px;">
+          <h3>5-Session Yoga Package</h3>
+          <p style="color:#6b6b6b;">
+	   A deeper, longer-term transformation — mind, body, and nervous system.</p>
+          <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
+            <li>Five 75–90 minute private sessions for $1000</li>
+            <li>Full personalized practice plan, mid-package review, and daily micro-practices (5-10 min each)</li>
+            <li>Detailed progress tracking, including mobility assessments and pose analysis photos/videos</li>
+	    <li>Support between session, unlimited calls/texts</li>
+            <li>Cycle-aware & recovery-friendly options</li>
+          </ul>
+          <div style="display:flex; gap:10px; flex-wrap:wrap;">
+            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
           </div>
         </div>
       </article>
@@ -181,44 +204,26 @@
     <div class="cards-row" style="gap:20px;">
       <div class="card" style="flex:1 1 280px; padding:20px;">
         <h3>1) Quick intake</h3>
-        <p style="color:#6b6b6b;">Share team size, schedule preferences, and goals.</p>
+        <p style="color:#6b6b6b;">Connect, schedule preferences, and goals.</p>
       </div>
       <div class="card" style="flex:1 1 280px; padding:20px;">
         <h3>2) Program setup</h3>
-        <p style="color:#6b6b6b;">We tailor a calendar + access: on-demand library and optional live sessions.</p>
+        <p style="color:#6b6b6b;">We tailor a calendar + access: in-person and/or virtual sessions.</p>
       </div>
       <div class="card" style="flex:1 1 280px; padding:20px;">
         <h3>3) Rollout & support</h3>
-        <p style="color:#6b6b6b;">We provide comms templates, check-ins, and usage tips to boost adoption.</p>
+        <p style="color:#6b6b6b;">Post session plan PDFs + individual coaching and support</p>
       </div>
-    </div>
-  </section>
-
-  <!-- Pricing note / example -->
-  <section class="container" style="padding:0 20px 50px;">
-    <div class="card" style="padding:24px; border:1px solid #eee;">
-      <h3 style="margin-top:0;">Pricing examples</h3>
-      <p style="color:#6b6b6b;">
-        Cohorts & orgs vary, but ballparks help planning:
-      </p>
-      <ul style="margin-left:18px; color:#6b6b6b;">
-        <li><strong>Team license:</strong> tiered per-seat or flat monthly for 25–250 seats</li>
-        <li><strong>Campus groups:</strong> discounted .edu pricing + multi-group bundles</li>
-        <li><strong>Add-ons:</strong> live sessions, private events, custom challenges</li>
-      </ul>
-      <p style="margin:14px 0 0;">
-        Ready to scope? <a href="#contact">Request a custom quote</a>.
-      </p>
     </div>
   </section>
 
   <!-- CTA band -->
   <section class="membership" aria-label="Invite band">
-    <div class="membership-media" style="background-image:url('images/corporate-band.jpg')"></div>
+    <div class="membership-media" style="background-image:url('images/oneonone-band.jpg')"></div>
     <div class="membership-overlay"></div>
     <div class="membership-inner container">
-      <h2>Bring wellness to your workplace or campus</h2>
-      <p>Flexible plans, fast setup, real results. Let’s design a program that fits your people.</p>
+      <h2>Ideal for: Clients looking for real change — better posture, reduced pain, a calmer nervous system, stronger core, increased mobility, and a sustainable yoga lifestyle.</h2>
+      <p>Flexible plans, fast setup, real results. Let’s design a program that fits your schedule.</p>
       <a class="btn btn-pill btn-outline" href="#contact">REQUEST A QUOTE</a>
     </div>
   </section>
@@ -227,7 +232,7 @@
   <section id="contact" class="container" style="padding:64px 20px;">
     <div class="card" style="padding:24px;">
       <h2 style="margin-top:0;">Contact</h2>
-      <p style="color:#6b6b6b;">Tell us about your team or department, ideal start date, and any goals or constraints. We’ll reply with options within 1–2 business days.</p>
+      <p style="color:#6b6b6b;">Tell us about yourself, ideal start date, and any goals or constraints. We’ll reply with options within 1–2 business days.</p>
       <p>
         <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">EMAIL US</a>
         <a class="btn btn-pill btn-outline" href="login.html">PREVIEW MEMBERSHIP</a>
