One on One class packs

--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -132,9 +132,9 @@
     <div class="cards-row" style="gap:20px;">
       <!-- Single Session -->
       <article class="card" style="flex:1 1 420px; overflow:hidden;">
-        <div class="card-media" style="height:240px; background:url('images/corporate-staff.jpg') center/cover;"></div>
+        <div class="card-media" style="height:240px; background:url('images/1-classpack.jpg') center/cover;"></div>
         <div class="card-body" style="padding:20px;">
-          <h3>Corporate / Staff Package</h3>
+          <h3>Single Session Package</h3>
           <p style="color:#6b6b6b;">
             Single private one-on-one yoga classes starting at $250.  
           </p>
@@ -153,7 +153,7 @@
 
       <!-- Multi Session Yoga Packages -->
       <article class="card" style="flex:1 1 420px; overflow:hidden;">
-        <div class="card-media" style="height:240px; background:url('images/student-grad.jpg') center/cover;"></div>
+        <div class="card-media" style="height:240px; background:url('images/3-classpack.jpg') center/cover;"></div>
         <div class="card-body" style="padding:20px;">
           <h3>3-Session Yoga Package</h3>
           <p style="color:#6b6b6b;">
@@ -171,13 +171,10 @@
           </div>
         </div>
       </article>
-    </div>
-  </section>
-
 
 <!-- Multi Session Yoga Packages -->
       <article class="card" style="flex:1 1 420px; overflow:hidden;">
-        <div class="card-media" style="height:240px; background:url('images/student-grad.jpg') center/cover;"></div>
+        <div class="card-media" style="height:240px; background:url('images/5-classpack.jpg') center/cover;"></div>
         <div class="card-body" style="padding:20px;">
           <h3>5-Session Yoga Package</h3>
           <p style="color:#6b6b6b;">
