One on One class packs card updates

--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -136,10 +136,10 @@
         <div class="card-body" style="padding:20px;">
           <h3>Single Session Package</h3>
           <p style="color:#6b6b6b;">
-            Single private one-on-one yoga classes starting at $250.  
+            Single private one-on-one yoga classes for individuals looking to deepen their practice.  
           </p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
-            <li>A fully customized all-levels 70-95 min yoga & mobility session.</li>
+            <li>A fully customized all-levels 70-95 min yoga & mobility session for $250.</li>
             <li>Guided breathwork & meditation, which can include include yoga nidra, grounding, or visualization work.</li>
             <li>Props can be provided for comfort & optimal alignment.</li>
             <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
@@ -160,10 +160,10 @@
             Perfect for beginners, busy professionals, or anyone wanting to build consistency.
           </p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
-	    <li>Three 75–90 minute private sessions for $675</li>
-            <li>A personalized practice plan and mid-package review</li>
-            <li>Support between session, 3 questions per week via text/email</li>
-            <li>Cycle-aware & recovery-friendly options</li>
+	    <li>Three 75–90 minute private sessions for $675, saving you $75.</li>
+            <li>A personalized practice plan and mid-package review.</li>
+	    <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.
+            <li>Support between sessions, up to 3 questions via text/email.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
@@ -178,13 +178,12 @@
         <div class="card-body" style="padding:20px;">
           <h3>5-Session Yoga Package</h3>
           <p style="color:#6b6b6b;">
-	   A deeper, longer-term transformation — mind, body, and nervous system.</p>
+	   A deeper, more sustainable transformation of the mind, body, and nervous system.</p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
-            <li>Five 75–90 minute private sessions for $1000</li>
-            <li>Full personalized practice plan, mid-package review, and daily micro-practices (5-10 min each)</li>
-            <li>Detailed progress tracking, including mobility assessments and pose analysis photos/videos</li>
-	    <li>Support between session, unlimited calls/texts</li>
-            <li>Cycle-aware & recovery-friendly options</li>
+            <li>Five 75–90 minute private sessions for $1000.</li>
+            <li>Full personalized practice plan, mid-package review, and daily micro-practices (5-10 min each).</li>
+ 	    <li>Support between session, unlimited calls/texts.</li>
+            <li>Detailed progress tracking, including mobility assessments and pose analysis photos/videos, included in a custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
