One on One class cards

--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -162,8 +162,9 @@
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
 	    <li>Three 75–90 minute private sessions for $675, saving you $75.</li>
             <li>A personalized practice plan and mid-package review.</li>
-	    <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.
             <li>Support between sessions, up to 3 questions via text/email.</li>
+	    <li>Guided breathwork & meditation, which can include include yoga nidra, grounding, or visualization work.</li>
+	    <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
