One on One class Request Quote Button Update

--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -145,7 +145,7 @@
             <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
             <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
           </div>
         </div>
@@ -167,7 +167,7 @@
 	    <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
             <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
           </div>
         </div>
@@ -187,7 +187,7 @@
             <li>Detailed progress tracking, including mobility assessments and pose analysis photos/videos, included in a custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
             <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
           </div>
         </div>
@@ -221,7 +221,7 @@
     <div class="membership-inner container">
       <h2>Ideal for: Clients looking for real change — better posture, reduced pain, a calmer nervous system, stronger core, increased mobility, and a sustainable yoga lifestyle.</h2>
       <p>Flexible plans, fast setup, real results. Let’s design a program that fits your schedule.</p>
-      <a class="btn btn-pill btn-outline" href="#contact">REQUEST A QUOTE</a>
+      <a class="btn btn-pill btn-outline" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST A QUOTE</a>
     </div>
   </section>
 
