YogawithLisa Futures Page

--- a/corporate.html
+++ b/corporate.html
@@ -146,7 +146,7 @@
             <li>Onboarding kit & comms templates</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST QUOTE</a>
             <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
           </div>
         </div>
@@ -167,7 +167,7 @@
             <li>Fast setup for departments & orgs</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href="#contact">REQUEST QUOTE</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST QUOTE</a>
             <a class="btn btn-pill btn-outline" href="login.html">STUDENT DISCOUNT</a>
           </div>
         </div>
@@ -207,7 +207,7 @@
         <li><strong>Add-ons:</strong> live sessions, private events, custom challenges</li>
       </ul>
       <p style="margin:14px 0 0;">
-        Ready to scope? <a href="#contact">Request a custom quote</a>.
+        Ready to scope? <a href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">Request a custom quote</a>.
       </p>
     </div>
   </section>
