--- a/index.html
+++ b/index.html
@@ -145,13 +145,22 @@
     <!-- Card 3 -->
     <article class="card">
       <a class="card-link" href="yoga-oneonone.html">
-        <img class="card-img img-default" src="images/card-oneonone-default.jpg" alt="InPerson">
+        <img class="card-img img-default" src="images/card-oneonone-default.jpg" alt="OneonOne">
         <img class="card-img img-hover"   src="images/card-oneonone-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>One-On-One</span></div>
       </a>
     </article>
     
     <!-- Card 4 -->
+    <article class="card">
+      <a class="card-link" href="yogaforkids.html">
+        <img class="card-img img-default" src="images/card-yogaforkids-default.jpg" alt="YogaForKids">
+        <img class="card-img img-hover"   src="images/card-yogaforkids-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Wellness</span></div>
+      </a>
+    </article>
+
+    <!-- Card 5 -->
     <article class="card">
       <a class="card-link" href="wellness.html">
         <img class="card-img img-default" src="images/card-wellness-default.jpg" alt="Wellness">
@@ -160,7 +169,7 @@
       </a>
     </article>
 
-    <!-- Card 5 -->
+    <!-- Card 6 -->
     <article class="card">
       <a class="card-link" href="corporate.html">
         <img class="card-img img-default" src="images/card-corporate-default.jpg" alt="Corporate">
@@ -169,7 +178,7 @@
       </a>
     </article>
 
-    <!-- Card 6 -->
+    <!-- Card 7 -->
     <article class="card">
       <a class="card-link" href="https://available-tarsal-b72.notion.site/Journal-27e6b96c13218019b5f8f864afea4ba1">
         <img class="card-img img-default" src="images/card-journal-default.jpg" alt="Travel">
