YogaforKids Card Update

--- a/index.html
+++ b/index.html
@@ -150,17 +150,8 @@
         <div class="card-cta"><span>One-On-One</span></div>
       </a>
     </article>
-    
-    <!-- Card 4 -->
-    <article class="card">
-      <a class="card-link" href="yogaforkids.html">
-        <img class="card-img img-default" src="images/card-yogaforkids-default.jpg" alt="YogaForKids">
-        <img class="card-img img-hover"   src="images/card-yogaforkids-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Wellness</span></div>
-      </a>
-    </article>
 
-    <!-- Card 5 -->
+    <!-- Card 4 -->
     <article class="card">
       <a class="card-link" href="wellness.html">
         <img class="card-img img-default" src="images/card-wellness-default.jpg" alt="Wellness">
@@ -169,12 +160,21 @@
       </a>
     </article>
 
-    <!-- Card 6 -->
+    <!-- Card 5 -->
     <article class="card">
       <a class="card-link" href="corporate.html">
         <img class="card-img img-default" src="images/card-corporate-default.jpg" alt="Corporate">
         <img class="card-img img-hover"   src="images/card-corporate-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Corporate</span></div>
+      </a>
+    </article>
+
+    <!-- Card 6 -->
+    <article class="card">
+      <a class="card-link" href="yogaforkids.html">
+        <img class="card-img img-default" src="images/card-yogaforkids-default.jpg" alt="YogaForKids">
+        <img class="card-img img-hover"   src="images/card-yogaforkids-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Yoga for Kids</span></div>
       </a>
     </article>
 
