YogaforKids Link Update

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <a class="card-link" href="yogaforkids.html">
         <img class="card-img img-default" src="images/card-yogaforkids-default.jpg" alt="YogaForKids">
         <img class="card-img img-hover"   src="images/card-yogaforkids-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Yoga for Kids</span></div>
+        <div class="card-cta"><span>Give Back</span></div>
       </a>
     </article>
 
