--- a/yogaforkids.html
+++ b/yogaforkids.html
@@ -49,13 +49,13 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/yogaforkids.jpg -->
-    <div class="hero-media" style="background-image:url('images/yogaforkids.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/yogaforkids-banner.jpg -->
+    <div class="hero-media" style="background-image:url('images/yogaforkids-banner.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">YogawithLisa Futures Foundation</span><br/>
+  	<span class="nowrap">Yoga for those in need.</span><br/>
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="images/CaTZelleCode.jpg">DONATE TODAY</a>
@@ -100,42 +100,50 @@
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
      <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    User Data Deletion Instructions 
+    YogawithLisa Futures Foundation 
   </h2>
     <p class="sub">
-Welcome! On behalf of the YogaWithLisa Futures Foundation, I would love to invite you to support our mission of expanding access to free, inclusive yoga and meditation for children, families, seniors, and community members across the Bay Area.
 
-As an organization dedicated to support health and well-being, we strive to ensure that every child and adult, regardless of income, ability, or background, has access to supportive movement practices that improve health and quality of life. However, we cannot do this alone. With your generous support, we can continue to offer programs that make a lasting, measurable impact on families throughout our community.
+  <p>Welcome!</p>
 
-Your donation, no matter the size, directly contributes to the success and well-being of the individuals we serve. It helps us create inclusive spaces where children can manage anxiety through breath work, where teens can build confidence and focus, where seniors can maintain mobility and independence, and where people with disabilities can participate fully in movement practices designed for their bodies.
+  <p>On behalf of the YogaWithLisa Futures Foundation, I would love to invite you to support our mission of expanding access to free, inclusive yoga and meditation for children, families, seniors, and community members across the Bay Area.</p>
 
-Join Us in Reaching Our Goal
+  <p>As an organization dedicated to supporting health and well-being, we strive to ensure that every child and adult, regardless of income, ability, or background, has access to supportive movement practices that improve health and quality of life. However, we cannot do this alone. With your generous support, we can continue to offer programs that make a lasting, measurable impact on families throughout our community.</p>
 
-We are working to raise $50,000 to launch and sustain a series of free community wellness initiatives throughout San Francisco, Berkeley, and Oakland. This includes:
+  <p>Your donation, no matter the size, directly contributes to the success and well-being of the individuals we serve. It helps us create inclusive spaces where children can manage anxiety through breathwork, where teens can build confidence and focus, where seniors can maintain mobility and independence, and where people with disabilities can participate fully in movement practices designed for their bodies.</p>
 
-Free yoga classes for kids experiencing anxiety, learning differences, or focus challenges
-Chair-yoga and adaptive yoga for seniors and people with disabilities
-Weekly community classes at local parks and studio spaces
-Yoga props and equipment (mats, blocks, straps, sensory supports) for participant
-Outreach and accessibility support through 510Families and local partner
-Studio rentals, park permits, insurance, and operational overhead
+  <h3>Join Us in Reaching Our Goal</h3>
 
-Here’s how you can help:
+  <p>We are working to raise <strong>$50,000</strong> to launch and sustain a series of free community wellness initiatives throughout San Francisco, Berkeley, and Oakland. This includes:</p>
 
-✅ Make a tax-deductible donation online at via our fiscal sponsor Communications in STEM 
-✅ Send a check payable to YogaWithLisa Futures Foundation
-✅ Become a corporate sponsor or fund a specific community program
-✅ Share this campaign with colleagues, philanthropic teams, and local partners
+  <ul>
+    <li>Free yoga classes for kids experiencing anxiety, learning differences, or focus challenges</li>
+    <li>Chair-yoga and adaptive yoga for seniors and people with disabilities</li>
+    <li>Weekly community classes at local parks and studio spaces</li>
+    <li>Yoga props and equipment (mats, blocks, straps, sensory supports) for participants</li>
+    <li>Outreach and accessibility support through 510Families and local partners</li>
+    <li>Studio rentals, park permits, insurance, and operational overhead</li>
+  </ul>
 
-Every contribution brings us closer to our goal and creates real opportunities for Bay Area children and families to access supportive, trauma-informed programming.
+  <h3>Here’s how you can help:</h3>
 
-If you have any questions or would like to discuss giving opportunities, please contact us at lisa@yogawithlisa.ai. We would be honored to recognize your generosity in our community events, communications, and annual impact report.
+  <ul>
+    <li>✅ Make a tax-deductible donation by selecting the Donate Today button above</li>
+    <li>✅ Become a corporate sponsor or fund a specific community program</li>
+    <li>✅ Share this campaign with colleagues, philanthropic teams, and local partners</li>
+  </ul>
 
-Thank you for believing in our mission and helping us build a healthier, more compassionate future for communities across the Bay.
+  <p>Every contribution brings us closer to our goal and creates real opportunities for Bay Area children and families to access supportive, trauma-informed programming.</p>
 
-Thank you!
-Dr. Lisa Eshun-Wilson
-Founder | YogaWithLisa Futures Foundation
+  <p>If you have any questions or would like to discuss giving opportunities, please contact us at <a href="mailto:lisa@yogawithlisa.ai">lisa@yogawithlisa.ai</a>. We would be honored to recognize your generosity in our community events, communications, and annual impact report.</p>
+
+  <p>Thank you for believing in our mission and helping us build a healthier, more compassionate future for communities across the Bay.</p>
+
+  <p><strong>Thank you!</strong><br>
+  Dr. Lisa Eshun-Wilson<br>
+  Founder | YogaWithLisa Futures Foundation</p>
+
+</div>
 
 </p>
   </div>
