--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <!-- Card 6 -->
     <article class="card">
-      <a class="card-link" href="yogaforkids.html">
+      <a class="card-link" href="giveback.html">
         <img class="card-img img-default" src="images/card-yogaforkids-default.jpg" alt="YogaForKids">
         <img class="card-img img-hover"   src="images/card-yogaforkids-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>Give Back</span></div>
