Corporate Page Updates

--- a/corporate.html
+++ b/corporate.html
@@ -219,7 +219,7 @@
     <div class="membership-inner container">
       <h2>Bring wellness to your workplace or campus</h2>
       <p>Flexible plans, fast setup, real results. Let’s design a program that fits your people.</p>
-      <a class="btn btn-pill btn-outline" href="#contact">REQUEST A QUOTE</a>
+      <a class="btn btn-pill btn-outline" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST A QUOTE</a>
     </div>
   </section>
 
