--- a/yoga-ondemand.html
+++ b/yoga-ondemand.html
@@ -124,7 +124,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       <div class="meta">
         <h3>Lift</h3>
         <p>Energize your body with sculpt, pilates-infused, and strength-based flows.</p>
-        <a href="login.html"
+        <a href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5"
            class="btn btn-pill btn-dark">Lift, tone, & sculpt</a>
       </div>
     </article>
